1.0rc2 - 1.0 final

  - added: better volume control
  - added: view -> selection boxes
  - added: updated installer with associations seperate from plugin installs, thanks insomnia
  - added: theme editor dialog. File -> Theme Editor
  - added: ability to title a NetRadio when you add it
  - added: light playback icon theme
  - changed: better theme support when drawing the currently playing song. 
  - changed: playlist 'drag and drop reorder' color 
  - changed: standardized appearance and workflow of all dialogs
  - changed: "musik" in sources panel renamed "browse"
  - changed: root items in the sources panel are now capitalized
  - changed: sources scrollbar draw location
  - changed: sources items now end with an ellipsis if text is not long enough
    to fit within the draw region (example: long playlist names)
  - changed: moved sources window toggles to the main "View" menu
  - changed: rearranged the file menu
  - changed: disallow 100% transparency
  - fixed: certain sources drag and drop errors
  - fixed: font loading issues
  - fixed: nasty crash with extremely long comments (or other fields)
  - fixed: BringWindowToTop on file drop 
  - fixed: font glitch during drag and drop in playlist
  - fixed: selection boxes now update properly after a playlist is deleted
  - fixed: scrollbar not appearing/disappearing in the sources window 
  - fixed: miniPlayer's window is musikCube, not the desktop. 
  - fixed: miniPlayer window not being initialized completely if no song playing
  - fixed: bugs regarding removing songs from the library via selection boxes
  - fixed: sorting by time added and last played works correctly now
  - fixed: OnDragLeave() not being properly handled & leaving DND artifacts around
  - fixed: NetRadio works once again
  - fixed: NetRadio playlist not refreshing after adding a new station
  - fixed: 'not playing' text shifted slightly on first launch.
  - fixed: make sure to 'unhighlight' last played song when playback stops